[project]
name = "subreef"
version = "0.1.0"
description = ""
authors = [
    {name = "palmal24",email = "malesicnet24@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "openai-whisper (>=20250625,<20250626)",
    "pysrt (>=1.1.2,<2.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "transformers (>=5.4.0,<6.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88


[tool.poetry.scripts]
subreef = "subreef.main:main"
[dependency-groups]
dev = [
    "ruff (>=0.15.8,<0.16.0)"
]
